Fix bottom-cropping image on hero banner.

--- a/theme/anidia-theme/src/css/components/_hero-slider.scss
+++ b/theme/anidia-theme/src/css/components/_hero-slider.scss
@@ -114,7 +114,7 @@
        @include desktop {
          display: block;
          height: 100%;
-         transform: scale(1.2);
+         transform: scale(1.05);
        }
      }
  
